// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter parent checkbox should be indetermniate 1`] = `
<Checkbox
  isChecked={false}
  isIndeterminate={true}
  label="Running Instances"
  onChange={[Function]}
/>
`;

exports[`Filter parent checkbox should be unchecked 1`] = `
<Checkbox
  isChecked={false}
  isIndeterminate={false}
  label="Running Instances"
  onChange={[Function]}
/>
`;
